[movies] feature: Add movie details activity
This commit also add the responsible classes that help with navigating
to the movie details activity.

--- a/presentation/src/main/res/values/strings.xml
+++ b/presentation/src/main/res/values/strings.xml
@@ -4,4 +4,6 @@
 
     <string name="app_name">Movies</string>
 
+    <string name="activity_movie_details_name">Movie Details</string>
+
 </resources>
