[movies] feature: Add custom toolbars
This commit replaces the dark action bar theme with no action bar and
so that to utilise custom toolbars for every app screen. This pattern
will mainly be utilised with the movies screen and its toolbar later
on, which will be responsible to filter movies by date (year, month,
etc.)

--- a/presentation/src/main/res/values/strings.xml
+++ b/presentation/src/main/res/values/strings.xml
@@ -4,6 +4,7 @@
 
     <string name="app_name">Movies</string>
 
+    <string name="activity_movies_name">Movies</string>
     <string name="activity_movie_details_name">Movie Details</string>
 
 </resources>
