--- a/presentation/src/main/res/values/strings.xml
+++ b/presentation/src/main/res/values/strings.xml
@@ -4,7 +4,7 @@
 
     <string name="app_name">Movies</string>
 
-    <string name="activity_movies_name">Movies</string>
+    <string name="activity_movies_name">@string/app_name</string>
     <string name="activity_movie_details_name">Movie Details</string>
 
 </resources>
