[movies-16] refactor: Rename android res values based on new structure
Since the project is now on feature modules, the res value files per
module can become less complex. No need for prefixes or suffixes
anymore.

--- a/core/src/main/res/values/strings.xml
+++ b/core/src/main/res/values/strings.xml
@@ -2,6 +2,9 @@
 
 <resources>
 
+    <string name="movie_backdrop_shared_element">movie_backdrop</string>
+
+    <!-- Item -->
     <string name="error_loading">
         Oops, we encountered an error while loading your movies…\n
         \n
