[movies-16] refactor: Move shared element movie to movie details
This object actually belong in movie details module and inside the
navigator package since this is where it is being utilised.

--- a/feature/movie-details/src/main/res/values/strings.xml
+++ b/feature/movie-details/src/main/res/values/strings.xml
@@ -4,4 +4,7 @@
 
     <string name="activity_movie_details_name">Movie Details</string>
 
+    <!-- Navigator -->
+    <string name="movie_backdrop_shared_element">movie_backdrop</string>
+
 </resources>
