[movies-16] refactor: Rename all strings to match android id convention
Also, this commit changed the underscore to a camel care convention for
all strings.

--- a/core/src/main/res/values/strings.xml
+++ b/core/src/main/res/values/strings.xml
@@ -3,7 +3,7 @@
 <resources>
 
     <!-- Item -->
-    <string name="error_loading">
+    <string name="tvErrorItem">
         Oops, we encountered an error while loading your movies…\n
         \n
         Please click here to try again!
