[movies-24] feature: Implement side effect for movies activity
This is a snackbar specific side effect implementation.

--- a/feature/movies/src/main/res/values/strings.xml
+++ b/feature/movies/src/main/res/values/strings.xml
@@ -7,4 +7,8 @@
     <string name="tvToolbarFilterYear">Year</string>
     <string name="tvToolbarFilterMonth">Month</string>
 
+    <!-- Snackbar -->
+    <string name="sbLoadMoviesError">There was an error while loading movies!</string>
+    <string name="sbLoadMoviesErrorAction">RETRY</string>
+
 </resources>
