[movies-25] feature: New app navigation utilising navigation component
This is the ultimate change that replaces the old with the new
navigation.

--- a/feature/movies/src/main/res/values/strings.xml
+++ b/feature/movies/src/main/res/values/strings.xml
@@ -3,7 +3,7 @@
 <resources>
 
     <!-- Toolbar -->
-    <string name="tvToolbarMoviesLabel">Movies</string>
+    <string name="navToolbarMoviesLabel">Movies</string>
     <string name="tvToolbarFilterYear">Year</string>
     <string name="tvToolbarFilterMonth">Month</string>
 
