--- a/feature/movie-details/src/main/res/values/strings.xml
+++ b/feature/movie-details/src/main/res/values/strings.xml
@@ -5,4 +5,8 @@
     <!-- Toolbar -->
     <string name="navToolbarMovieDetailsLabel">Movie Details</string>
 
+    <!-- Snackbar -->
+    <string name="sbLoadMovieError">There was an error while loading movie!</string>
+    <string name="sbLoadMovieErrorAction">RETRY</string>
+
 </resources>
