--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<resources>
+<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="DuplicateStrings">
 
     <string name="appName">Movies</string>
+
+    <!-- Toolbar -->
+    <string name="navMoviesLabel">Movies</string>
+    <string name="navMovieDetailsLabel">Movie Details</string>
 
 </resources>
