[movies-26] feature: Observe network connectivity on app activity level
This is done on the app activity itself, which is a parent and the root
for all other feature screens (fragments), so that every other screen
can automatically benefit from this functionality without the need to
add it explicitly.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,7 @@
     <string name="navMoviesLabel">Movies</string>
     <string name="navMovieDetailsLabel">Movie Details</string>
 
+    <!-- Snackbar -->
+    <string name="sbNoConnectivity">Watch out, you are currently offline!</string>
+
 </resources>
