[movies-26] feature: Check connectivity prior triggering on click events
All the below on click events will cause a reload of movies, as such
their interaction is limited to when the app is online:
- onFilterClicked
- onCloseClicked
- onYearClicked
- onMonthClicked
Otherwise, a descriptive toast is shown to the user.

--- a/feature/movies/src/main/res/values/strings.xml
+++ b/feature/movies/src/main/res/values/strings.xml
@@ -10,4 +10,7 @@
     <string name="sbLoadMoviesError">There was an error while loading movies!</string>
     <string name="sbLoadMoviesErrorAction">RETRY</string>
 
+    <!-- Toast -->
+    <string name="tsNoConnectivity">Will not interact while offline!</string>
+
 </resources>
