[movies] migration: Migrate month and year picker library locally
The 'Monthandyearpicker' library (https://mvnrepository.com/artifact/
com.whiteelephant/monthandyearpicker) hasn't been updated since
September 2018. As such, it is getting old and as such it becomes legacy
 with every day basing by. But more specifically, with this library as a
dependency the jetifier cannot be dropped.

As such, all the code and resources within that library has been
extracted from it and moved under the 'io.petros.movies.picker.lib'
package, where it will live and be maintained from now on.

Also, the non library specific movie related code has been moved under
the 'io.petros.movies.picker.movie' package.

Note: The library codebase is all Java and as such during this initial
migration no code was migrated to Kotlin. However, a log of improvements
was made, such as fixing/suppressing Lint warning, restructuring the
library api, replacing logging with Timber, etc.

--- a/lib/picker/src/main/res/values/strings.xml
+++ b/lib/picker/src/main/res/values/strings.xml
@@ -2,6 +2,11 @@
 
 <resources>
 
+    <!-- Basic -->
+    <string name="label_month">MONTH</string>
+    <string name="label_year">YEAR</string>
+
+    <!-- Dialog -->
     <string name="dlgMovieYear">Select Movie Year</string>
     <string name="dlgMovieMonth">Select Movie Month</string>
 
