[movies-29] feature: Add drawer and jetpack compose menu item switch
This 'Jetpack Compose' menu item switch will be later on be used to
change the screens from using the legacy Android View UI system to using
the new modern Jetpack Compose UI.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,6 +4,11 @@
 
     <string name="appName">Movies</string>
 
+    <!-- Drawer -->
+    <string name="drawerHeaderTitle">Android Studio</string>
+    <string name="drawerHeaderEmail">android.studio@android.com</string>
+    <string name="drawerMenuItemJetpackCompose">Jetpack Compose</string>
+
     <!-- Toolbar -->
     <string name="navMoviesLabel">Movies</string>
     <string name="navMovieDetailsLabel">Movie Details</string>
